update 6-9-2023